[package]
name = "simulation_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5"
common = { git = "https://github.com/Cpp-enjoyers/common.git" }
eframe = "0.30.0"
egui_graphs = "0.23.0"
egui = "0.30.0"
petgraph = "0.6"
tempfile = "3.16.0"
webbrowser = "1.0.3"
scraper = "0.22"
ap2024_unitn_cppenjoyers_drone = { git = "https://github.com/Cpp-enjoyers/drone.git" }